--- a/src/styles/scss/layout/_layout.scss
+++ b/src/styles/scss/layout/_layout.scss
@@ -3,12 +3,16 @@
 @import '../abstracts/_functions';
 @import '../abstracts/_variables';
 
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
-  height: 100vh;
   color: $whiteDark;
   letter-spacing: 0.025em;
-  overflow-x: hidden;
-  overscroll-behavior: none;
+  height: 100%;
+  overflow: auto;
   @include mixins.primaryLinearGradient();
 }
 
